--- a/work.html
+++ b/work.html
@@ -1,14 +1,24 @@
-<section class="fade-in">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Work Experience - Dustin Perry Portfolio</title>
+  <link rel="stylesheet" href="style.css">
+  <script defer src="script.js"></script>
+</head>
+<body>
+  <header>
+    <h1>Work Experience</h1>
+  </header>
+
+  <section class="fade-in">
     <h2>Painter/Laborer</h2>
-    <p>Keep it wet - Indianapolis, IN<br>June 2020 to Present</p>
-    <p>Managed multiple client projects, improved material usage, and executed quality control checks.</p>
-  
+    <p><strong>Keep it Wet</strong> – Indianapolis, IN</p>
+    <p>June 2020 to Present</p>
+    <p>Managed multiple client projects simultaneously, enhancing project delivery and customer satisfaction by meeting deadlines and expectations, leading to a 20% increase in repeat clients. Improved material usage efficiency, introducing cost-saving methods that reduced material waste by 15%, saving an estimated $10,000 annually. Executed quality control checks, ensuring superior finish and durability of completed projects, raising the overall quality standard by 10%.</p>
+    
     <h2>Machine Operator</h2>
-    <p>Richardson Molding LLC - Columbus, IN<br>July 2019 to May 2020</p>
-    <p>Operated key equipment, increased production efficiency, and maintained machinery.</p>
-  
-    <h2>Service Technician</h2>
-    <p>EPractical SOLUTIONS - Indianapolis, IN<br>February 2017 to April 2019</p>
-    <p>Installed hardware/software, provided tech support, and maintained equipment.</p>
-  </section>
-  
+    <p><strong>Richardson Molding LLC</strong> – Columbus, IN</p>
+    <p>July 2019 to May 2020</p>
+    <p>Operated and assisted in the installation of key equipment, c
